kubernetes/version-1.1/ingress-samplebank.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: deployment-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "blue-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "600"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  rules:
  - http:
      paths:
        - backend:
            serviceName: samplebank
            servicePort: 3000
          path: /bank-portal(/|$)(.*)
